Separate plotting for corry and tbsw

--- a/plot_from_corry.ipynb
+++ b/plot_from_corry.ipynb
@@ -4,10 +4,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "90cb4329",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import extract_corry_root\n",
+    "import extract_tbsw_root\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -19,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_keys = {\n",
+    "selected_keys_corry = {\n",
     "\"residualsX\":'RMS',\n",
     "\"residualsX1pix\":'RMS',\n",
     "\"residualsX2pix\":'RMS',\n",
@@ -39,21 +42,31 @@
     "#\"AnalysisEfficiency/Monopix2_0/eTotalEfficiency\":'single_Efficiency',\n",
     "\"efficiencyColumns\":'Efficiency',\n",
     "\"efficiencyRows\":'Efficiency'\n",
+    "}\n",
+    "\n",
+    "selected_keys_tbsw = {\n",
+    "\"hres_u_all\":'RMS',\n",
+    "\"hres_v_all\":'RMS',\n",
+    "\"hCharge\":'Mean',\n",
+    "\"hCCharge\":'Mean',\n",
+    "\"hsize\":'Mean',\n",
+    "\"h2_efficiencymap\":'Efficiency',\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a09dee1",
+   "id": "17c8cc2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_analysis = '/run/user/1000/gvfs/sftp:host=10.12.161.231,user=testbeam1/mnt/DiskD/VTX/corry_out'\n",
-    "start_run = 348\n",
-    "end_run = 353\n",
-    "x_axis = [5,6,7,8,9,10]\n",
-    "x_axis_name = 'HV [V]'\n",
+    "#path_to_analysis = '/home/bgnet/workspace-test/'\n",
+    "start_run = 279\n",
+    "end_run = 283\n",
+    "x_axis = [1,2,3,4,5]\n",
+    "x_axis_name = 'PSUB/PWELL [V]'\n",
     "\n"
    ]
   },
@@ -65,6 +78,7 @@
    "outputs": [],
    "source": [
     "df = extract_corry_root.get_object(path_to_analysis,range(start_run,end_run+1,1))\n",
+    "#df = extract_tbsw_root.get_object(path_to_analysis,range(start_run,end_run+1,1))\n",
     "#df"
    ]
   },
@@ -81,7 +95,7 @@
     "    ratio_plot, ax_ratio = plt.subplots(figsize=(16, 9))\n",
     "\n",
     "    ax_ratio.plot(x_axis, df[column],\n",
-    "                  label=selected_keys[column]+' '+column, c='b', marker='x',\n",
+    "                  label=selected_keys_corry[column]+' '+column, c='b', marker='x',\n",
     "                  markersize=10, linestyle=\"-\")\n",
     "\n",
     "    ax_ratio.set_xlabel(x_axis_name, fontsize=25)\n",
